@@ -4,7 +4,6 @@ import br.com.task.manager.model.Task;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 public class SortByCompletionStatus implements TaskSortingStrategy {
@@ -12,7 +11,7 @@ public class SortByCompletionStatus implements TaskSortingStrategy {
     public List<Task> sort(List<Task> tasks) {
         return tasks.stream()
                 .sorted(Comparator.comparing(Task::getStatus))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
 
