@@ -4,13 +4,12 @@ import br.com.task.manager.model.Task;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class SortByPriority implements TaskSortingStrategy {
     @Override
     public List<Task> sort(List<Task> tasks) {
         return tasks.stream()
                 .sorted(Comparator.comparing(Task::getPriority))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
